--- a/index.html
+++ b/index.html
@@ -1,4 +1,50 @@
+
 <!DOCTYPE html>
+<html lang="en" data-theme="light">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>TechGuru</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <header class="site-header">
+    <div class="navbar-container container">
+      <a href="/" class="logo"><img src="logo.svg" alt="TechGuru"></a>
+      <nav class="main-nav">
+        <a href="#hero">Home</a>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#faq">FAQ</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <div class="nav-controls">
+        <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
+        <button class="hamburger" aria-label="Menu">☰</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero, Services, About, FAQ, Testimonials, Contact Sections... -->
+
+  <button class="chat-toggle" aria-label="Toggle chat">💬</button>
+  <div class="chatbox">
+    <div class="chatbox-header">
+      <img src="bot-avatar.png" class="chatbox-bot-avatar" alt="Bot">
+      <span>TechGuru Agent</span>
+      <button aria-label="Close chat">×</button>
+    </div>
+    <div class="chatbox-body"></div>
+    <form class="chatbox-form">
+      <input type="text" placeholder="Type a message…" aria-label="Message">
+      <button type="submit">Send</button>
+    </form>
+  </div>
+
+  <script src="main.js"></script>
+</body>
+</html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
