--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="TechGuru Services - Scalable Cloud, DevOps, AI, Automation solutions for startups." />
+  <meta name="keywords" content="TechGuru, cloud, DevOps, AI, automation, startup tech solutions" />
+  <meta name="robots" content="index, follow" />
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <title>TechGuru | Pack. Optimize. Deploy. Scale Up.</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <script>
+    // Splash redirect logic
+    (function() {
+      const alreadyPlayed = localStorage.getItem('splashPlayed');
+      if (!alreadyPlayed) {
+        window.location.href = 'splash.html';
+      }
+    })();
+  </script>
+</head>
+<body>
+  <!-- Content here remains the same -->
+  <!-- Your full existing body content from index.html goes here -->
+</body>
+</html>
+
+
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -375,3 +404,4 @@
   <script type="module" src="js/services.js"></script>
 </body>
 </html>
+
