--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!DOCTYPE html>
+><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -404,4 +404,5 @@
   <script type="module" src="js/services.js"></script>
 </body>
 </html>
+
 
