--- a/splash.html
+++ b/splash.html
@@ -1,58 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TechGuru Splash</title>
+  <meta charset="UTF-8">
+  <title>TechGuru – Home with Splash</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     html, body {
-      margin: 0; padding: 0; height: 100%; width: 100%; background: #000;
-      overflow: hidden;
-      display: flex; justify-content: center; align-items: center;
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      color: #fff;
+      background: #000;
+      height: 100%;
+      width: 100%;
     }
-    #splash-video {
+    body {
+      min-height: 100vh;
+      min-width: 100vw;
+    }
+    #splash-overlay {
+      position: fixed;
+      inset: 0;
       width: 100vw;
       height: 100vh;
-      object-fit: cover;
+      background: #000;
+      z-index: 9999;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      transition: opacity 0.4s;
+    }
+    #splash-video {
+      display: block;
+      max-width: 90vw;
+      max-height: 90vh;
+      object-fit: contain;
+      border-radius: 12px;
+      box-shadow: 0 6px 24px rgba(0,0,0,0.35);
+      background: #111;
     }
     #skip-btn {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: rgba(0,0,0,0.6);
-      color: white;
+      position: absolute;
+      top: 22px;
+      right: 22px;
+      background: rgba(0,0,0,0.74);
+      color: #fff;
       border: none;
-      padding: 12px 20px;
-      font-size: 16px;
+      padding: 12px 22px;
+      font-size: 1rem;
+      border-radius: 7px;
       cursor: pointer;
-      border-radius: 4px;
-      user-select: none;
-      z-index: 10;
+      z-index: 10001;
+      letter-spacing: 0.01em;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.18);
+      transition: background 0.2s;
+      outline: none;
+    }
+    #skip-btn:active,
+    #skip-btn:focus {
+      background: #222;
+    }
+    #skip-btn:hover {
+      background: rgba(30,30,30,0.93);
+    }
+    header, footer {
+      background: #0a1f44;
+      color: #fff;
+      padding: 16px;
+    }
+    main { padding: 20px; }
+    @media (max-width: 600px) {
+      #splash-video {
+        max-width: 100vw;
+        max-height: 100vw;
+        border-radius: 0;
+      }
+      #skip-btn {
+        top: 10px;
+        right: 10px;
+        padding: 8px 14px;
+        font-size: 0.95rem;
+      }
+    }
+    @media (max-height: 500px) {
+      #splash-video {
+        max-height: 80vh;
+      }
     }
   </style>
 </head>
 <body>
-  <video id="splash-video" autoplay muted playsinline>
-    <source src="splash.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
-  <button id="skip-btn" aria-label="Skip Splash Screen">Skip</button>
+  <!-- Splash Screen -->
+  <div id="splash-overlay">
+    <video id="splash-video" autoplay muted playsinline>
+      <source src="splash.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <button id="skip-btn">Skip</button>
+  </div>
+  <!-- Main Site Content -->
+  <header>
+    <h1>Welcome to TechGuru</h1>
+  </header>
+  <main>
+    <p>This is the homepage content for your static website.</p>
+    <p>Add your sections, articles, and other content here.</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 TechGuru. All rights reserved.</p>
+  </footer>
+  
 
-  <script>
-    const video = document.getElementById('splash-video');
-    const skipBtn = document.getElementById('skip-btn');
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const video = document.getElementById("splash-video");
+    const skipBtn = document.getElementById("skip-btn");
 
-    function goToIndex() {
-      window.location.href = 'index.html';
+    function exitSplash() {
+      localStorage.setItem("splashPlayed", "true");
+      window.location.href = "index.html";
     }
 
-    video.addEventListener('ended', goToIndex);
-    skipBtn.addEventListener('click', goToIndex);
-
-    // Auto redirect after 7 seconds max
-    setTimeout(goToIndex, 7000);
-  </script>
+    skipBtn.addEventListener("click", exitSplash);
+    setTimeout(exitSplash, 7000);
+    video.addEventListener("ended", exitSplash);
+  });
+</script>
 </body>
 </html>
+
+
