--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
             <p>Scalable cloud solutions designed for modern businesses. From setup to optimization, we handle your infrastructure needs.</p>
           </div>
           <div class="service-card">
-            <img src="https://via.placeholder.com/80?text=AI" alt="AI Automation" width="80" height="80" />
+            <img src="ai-assistant.png" alt="AI Automation" width="80" height="80" />
             <h3>AI Automation</h3>
             <p>Intelligent automation solutions that streamline your workflows and boost productivity with cutting-edge AI technology.</p>
           </div>
           <div class="service-card">
-            <img src="https://via.placeholder.com/80?text=DevOps" alt="DevOps Solutions" width="80" height="80" />
+            <img src=""deovops.png alt="DevOps Solutions" width="80" height="80" />
             <h3>DevOps Solutions</h3>
             <p>Complete DevOps pipeline setup and management to accelerate your development and deployment processes.</p>
           </div>
           <div class="service-card">
-            <img src="https://via.placeholder.com/80?text=Custom" alt="Custom Development" width="80" height="80" />
+            <img src="branding-design.png"="Custom Development" width="80" height="80" />
             <h3>Custom Development</h3>
             <p>Tailored software solutions built to meet your specific business requirements and technical specifications.</p>
           </div>
           <div class="service-card">
-            <img src="https://via.placeholder.com/80?text=Security" alt="Security & Compliance" width="80" height="80" />
+            <img src="live-training.png" alt="Security & Compliance" width="80" height="80" />
             <h3>Security & Compliance</h3>
             <p>Comprehensive security audits and compliance solutions to protect your business and customer data.</p>
           </div>
           <div class="service-card">
-            <img src="https://via.placeholder.com/80?text=Performance" alt="Performance Optimization" width="80" height="80" />
+            <img src="startup-systems.png" alt="Performance Optimization" width="80" height="80" />
             <h3>Performance Optimization</h3>
             <p>System optimization and performance tuning to ensure your applications run at peak efficiency.</p>
           </div>
@@ -308,4 +308,5 @@
   <script src="https://cdn.jsdelivr.net/npm/particles.js" defer></script>
 </body>
 </html>
+
 
